--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,38 +4,34 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Posts</h1>
+    {{ content }}
 
-  {{ content }}
+    <h1 class="page-heading">Posts</h1>
+    <ul class="post-list">
+        {% for post in site.posts %}
+            <li>
+                {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+                <span class="post-meta">{{ post.date | date: date_format }}</span>
 
-  <ul class="post-list">
-    {% for post in site.posts %}
-      <li>
-        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-
-        <h2>
-          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </h2>
-      </li>
-    {% endfor %}
-  </ul>
-
-  <h1 class="page-heading">Gists</h1>
-
-  <ul class="post-list">
-    {% for gist in site.gists %}
-      <li>
-        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-        <span class="post-meta">{{ gist.date | date: date_format }}</span>
-
-        {% for tag in gist.tags %}
-          <span class="tag post-meta" style="background: #ED9240; border-radius: 2px; padding: 2px 5px; color: white;">{{ tag }}</span>
+                <h2><a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a></h2>
+            </li>
         {% endfor %}
+    </ul>
 
-        <h2><a class="post-link" href="{{ gist.url | relative_url }}">{{ gist.title }}</a></h2>
-      </li>
-    {% endfor %}
-  </ul>
+    <h1 class="page-heading">Gists</h1>
+    <ul class="post-list">
+        {% for gist in site.gists %}
+        <li>
+            {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+            <span class="post-meta">{{ gist.date | date: date_format }}</span>
+
+            {% for tag in gist.tags %}
+                <span class="tag post-meta" style="background: #ED9240; border-radius: 2px; padding: 2px 5px; color: white;">{{ tag }}</span>
+            {% endfor %}
+
+            <h2><a class="post-link" href="{{ gist.url | relative_url }}">{{ gist.title }}</a></h2>
+        </li>
+        {% endfor %}
+    </ul>
 
 </div>
