--- a/_sass/partials/_reset.scss
+++ b/_sass/partials/_reset.scss
@@ -58,6 +58,10 @@ figcaption {
   font-size: 10px
 }
 
+small {
+  @include rem-calc(13px);
+}
+
 /**
  * Lists
  */
@@ -78,31 +82,6 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
   font-weight: $base-font-weight;
-}
-
-/**
- * Links
- */
-a {
-  color: $primary-color;
-  text-decoration: none;
-
-  &:visited {
-    color: darken($primary-color, 15%);
-  }
-
-  &:hover {
-    color: $text-color;
-    text-decoration: underline;
-  }
-
-  .social-media-list &:hover {
-    text-decoration: none;
-
-    .username {
-      text-decoration: underline;
-    }
-  }
 }
 
 /**
