--- a/_layouts/gist.html
+++ b/_layouts/gist.html
@@ -17,7 +17,7 @@ layout: default
       {% endif %}</span><br>
 
       {% for tag in page.tags %}
-        <span class="tag post-meta" style="background: #ED9240; border-radius: 2px; padding: 2px 5px; color: white;">{{ tag }}</span>
+        <small class="tag post-meta" style="background: #ED9240; border-radius: 2px; padding: 2px 5px; color: white;">{{ tag }}</small>
       {% endfor %}
 
   </header>
