--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,21 @@
 <header class="site-header" role="banner">
     <div class="wrapper">
-
-        <div class="g">
-            <div class="col-flex">
+        <div class="g g--align-center">
             {% assign default_paths = site.pages | map: "path" %} {% assign page_paths = site.header_pages | default: default_paths %}
-            <a class="site-title" href="{{ " / " | relative_url }}">{{ site.title | escape }}</a>
-        </div>
+            <h1><a class="site-title" href="{{ "/" | relative_url }}">sg.</a></h1>
 
-        <div class="col-flex">
-            {% if page_paths %}
-                <nav class="site-nav u-text-right--m">
-                    {% for path in page_paths %}
-                        {% assign my_page = site.pages | where: "path", path | first %}
-                        {% if my_page.title %}
-                            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-                        {% endif %}
-                    {% endfor %}
-                </nav>
-            {% endif %}
+            <div class="col-flex justify-content: flex-end;">
+                {% if page_paths %}
+                    <nav class="site-nav u-text-right--m">
+                        {% for path in page_paths %}
+                            {% assign my_page = site.pages | where: "path", path | first %}
+                            {% if my_page.title %}
+                                <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                            {% endif %}
+                        {% endfor %}
+                    </nav>
+                {% endif %}
+            </div>
         </div>
     </div>
 </header>
