--- a/_sass/modules/_config.scss
+++ b/_sass/modules/_config.scss
@@ -2,7 +2,6 @@
 // Global Settings
 //**
 
-
 /* @import must be at top of file, otherwise CSS will not work */
 @import url("//hello.myfonts.net/count/34ce95");
 
@@ -19,6 +18,7 @@
 // Global Font Imports
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700);
 @import url('https://fonts.googleapis.com/css?family=Abel');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900');
 
 
 // Global Responsive Breakpoints
@@ -36,21 +36,23 @@ $text-color: #4d5c70;
 $text-color-dark: #314259;
 
 // Global Sizing Variables (need to add / remove values to map _maps.scss)
-$f-xxl: 2.625rem;
-$f-xl: 2.25rem;
-$f-l: 1.575rem;
-$f-m: 1.225rem;
-$f-base: 1rem;
-$f-s: 1.125rem;
+$f-xxl: 3.25rem;
+$f-xl: 3rem;
+$f-l: 2.625rem;
+$f-m: 2.25rem;
+$f-base: 1.65rem;
+$f-s: 1.4rem;
 $f-xs: 0.875rem;
 $f-xxs: 0.75rem;
 
 // Global Font Variables
 $helvetica: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-family: 'Gilroy-Regular', serif;
+$base-font-family: 'Playfair Display', sans-serif;
+$pt-serif: "pt-serif", serif;
 
-$base-font-size: 16px;
-$base-font-weight: regular;
+$base-font-size: $f-base;
+$base-line-height: 1.5;
+$base-font-weight: normal;
 
 // Include Specific Modules
 @import "mixins";
