--- a/_sass/partials/_reset.scss
+++ b/_sass/partials/_reset.scss
@@ -1,25 +1,22 @@
-/**
- * Reset some basic elements
- */
-body, h1, h2, h3, h4, h5, h6,
-p, blockquote, pre, hr,
-dl, dd, ol, ul, figure {
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  font-size: 100%;
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+  display: block;
 }
 
 /**
  * Basic styling
  */
+html {
+  font-size:62.5%;
+}
+
 body {
   font-size: $base-font-size;
-  font-family: $base-font-family;
+  font-family: $pt-serif;
   font-weight: $base-font-weight;
+  line-height: $base-line-height;
   color: $text-color;
+  hyphens: auto;
   background-color: white;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
@@ -27,16 +24,6 @@ body {
        -o-font-feature-settings: "kern" 1;
           font-feature-settings: "kern" 1;
   font-kerning: normal;
-}
-
-/**
- * Set `margin-bottom` to maintain vertical rhythm
- */
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-ul, ol, dl, figure,
-%vertical-rhythm {
-  margin-bottom: 10px / 2;
 }
 
 /**
@@ -54,12 +41,16 @@ figure > img {
   display: block;
 }
 
+figure {
+  margin: 0;
+}
+
 figcaption {
-  font-size: 10px
+  font-size: $f-s;
 }
 
 small {
-  @include rem-calc(13px);
+  font-size: $f-s;
 }
 
 /**
@@ -68,6 +59,9 @@ small {
 ul, ol {
   list-style: none;
   margin-left: 0px;
+  list-style-type: disc;
+  margin-bottom: 1rem;
+  padding-left: 2rem;
 }
 
 li {
@@ -88,12 +82,11 @@ h1, h2, h3, h4, h5, h6 {
  * Blockquotes
  */
 blockquote {
-  color: $project-grey;
-  border-left: 4px solid lighten($project-grey, 5%);
-  padding-left: 10px / 2;
-  @include rem-calc(16px);
-  letter-spacing: -1px;
+  color: darken($project-grey, 25%);
+  border-left: 4px solid $project-grey;
+  padding-left: $f-s;
   font-style: italic;
+  margin-left: 0;
 
   > :last-child {
     margin-bottom: 0;
@@ -105,14 +98,13 @@ blockquote {
  */
 pre,
 code {
-  @include rem-calc(16px);
-  border: 1px solid lighten($project-grey, 5%);
+  border: 1px solid darken($project-grey, 5%);
   border-radius: 3px;
   background-color: #eef;
 }
 
 code {
-  padding: 1px 5px;
+  padding: 2px 5px;
 }
 
 pre {
