--- a/_sass/modules/_syntax-highlighting.scss
+++ b/_sass/modules/_syntax-highlighting.scss
@@ -2,10 +2,9 @@
  * Syntax highlighting styles
  */
 .highlight {
-  background: #fff;
+  font-size: $f-s;
 
   .highlighter-rouge & {
-    background: #eef;
   }
 
   .c     { color: #998; font-style: italic } // Comment
