--- a/_layouts/gist.html
+++ b/_layouts/gist.html
@@ -6,15 +6,8 @@ layout: default
   <a href="{{ "/" | relative_url }}"><small>← all gists</small></a>
 
   <header class="post-header">
-    <h2 itemprop="name headline">{{ page.title | escape }}</h2>
+    <h2 itemprop="name headline" style="margin-bottom: 10px;">{{ page.title | escape }}</h2>
     <span class="post-meta">
-      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-        {{ page.date | date: date_format }}
-      </time>
-      {% if page.author %}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
-      {% endif %}</span><br>
 
       {% for tag in page.tags %}
         <small class="tag post-meta" style="background: #ED9240; border-radius: 2px; padding: 2px 5px; color: white;">{{ tag }}</small>
