--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,32 +8,30 @@ layout: default
 
     <h2 class="page-heading">Posts</h2>
     <p>A list of recent posts i've been working on</p>
-    <ul class="post-list">
+    <ul class="list--naked">
         {% for post in site.posts %}
             <li>
                 {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-                <span class="post-meta">{{ post.date | date: date_format }}</span>
-
                 <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+                <br/><small class="post-meta">{{ post.date | date: date_format }}</small>
             </li>
         {% endfor %}
+
+        <a href="#"><small>View all posts</small></a>
     </ul>
 
     <h2 class="page-heading">Gists</h2>
     <p>A list of gists i find helpful for my daily workflow</p>
-    <ul class="post-list">
+    <ul class="list--naked list--extra-pad">
         {% for gist in site.gists %}
         <li>
             {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-            <span class="post-meta">{{ gist.date | date: date_format }}</span>
+            <a class="post-link" href="{{ gist.url | relative_url }}">{{ gist.title }}</a>
 
             {% for tag in gist.tags %}
                 <small class="tag post-meta" style="background: #ED9240; border-radius: 2px; padding: 2px 5px; color: white;">{{ tag }}</small>
             {% endfor %}
-
-            <a class="post-link" href="{{ gist.url | relative_url }}">{{ gist.title }}</a>
         </li>
         {% endfor %}
+        <a href="#"><small>View all gists</small></a>
     </ul>
-
-</div>
