--- a/_sass/modules/_config.scss
+++ b/_sass/modules/_config.scss
@@ -19,6 +19,8 @@
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700);
 @import url('https://fonts.googleapis.com/css?family=Abel');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
+
 
 
 // Global Responsive Breakpoints
@@ -36,12 +38,12 @@ $text-color: #4d5c70;
 $text-color-dark: #314259;
 
 // Global Sizing Variables (need to add / remove values to map _maps.scss)
-$f-xxl: 3.25rem;
-$f-xl: 3rem;
-$f-l: 2.625rem;
-$f-m: 2.25rem;
-$f-base: 1.65rem;
-$f-s: 1.4rem;
+$f-xxl: 4.5rem;
+$f-xl: 4rem;
+$f-l: 3.25rem;
+$f-m: 1.95rem;
+$f-base: 1.5rem;
+$f-s: 1.25rem;
 $f-xs: 0.875rem;
 $f-xxs: 0.75rem;
 
@@ -49,6 +51,7 @@ $f-xxs: 0.75rem;
 $helvetica: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-family: 'Playfair Display', sans-serif;
 $pt-serif: "pt-serif", serif;
+$sans-serif: "Open Sans", sans-serif;
 
 $base-font-size: $f-base;
 $base-line-height: 1.5;
