--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -24,7 +24,7 @@ h3 {
 }
 
 h4 {
-  font-size: $f-s;
+  font-size: $f-base;
 }
 
 // Paragraphs
@@ -41,18 +41,18 @@ p, blockquote {
 // Anchors
 
 a {
-  color: $text-color-dark;
+  color: #F05454;
   text-decoration: underline;
   text-decoration-skip: ink;
   hyphens: none;
 
   &:visited {
-    color: lighten($text-color, 5%);
+    color: lighten(#F05454, 5%);
     cursor: pointer;
   }
 
   &:hover {
-    color: darken($text-color, 5%);
+    color: darken(#F05454, 5%);
     cursor: pointer;
   }
 }
@@ -62,6 +62,5 @@ a {
 // Create modifier classes based on map in config
 @each $fontsize, $size in $fontsizes {
  .f--#{$fontsize} {
-   font-size: $size;
- }
+   font-size: $size; }
 }
