color variables updated

--- a/_sass/modules/_config.scss
+++ b/_sass/modules/_config.scss
@@ -30,12 +30,12 @@ $desktop-break: 60rem;
 $large-desktop-break: 73.13rem;
 
 // Global Color Variables (need to add / remove values to map _maps.scss)
-$primary-color: #d33c2c;
+$primary-color: red;
 $project-grey: #eee;
 $project-black: #2C363F;
 $project-white: #fff;
-$text-color: #4d5c70;
-$text-color-dark: #314259;
+$text-color: #25292E;
+$text-color-dark: #25292E;
 
 // Global Sizing Variables (need to add / remove values to map _maps.scss)
 $f-xxl: 4.5rem;
