--- a/_sass/partials/_reset.scss
+++ b/_sass/partials/_reset.scss
@@ -3,6 +3,15 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
+::selection {
+  background: $primary-color; /* WebKit/Blink Browsers */
+  color: #F6F9FC;
+}
+::-moz-selection {
+  background: $primary-color; /* Gecko Browsers */
+  color: #F6F9FC;
+}
+
 /**
  * Basic styling
  */
@@ -17,7 +26,7 @@ body {
   line-height: $base-line-height;
   color: $text-color;
   hyphens: auto;
-  background-color: #F6F9FC;
+  background-color: white;
   margin: 0;
   padding: 0;
 }
