--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -41,18 +41,18 @@ p, blockquote {
 // Anchors
 
 a {
-  color: #F05454;
+  color: $primary-color;
   text-decoration: underline;
   text-decoration-skip: ink;
   hyphens: none;
 
   &:visited {
-    color: lighten(#F05454, 5%);
+    color: lighten($primary-color, 5%);
     cursor: pointer;
   }
 
   &:hover {
-    color: darken(#F05454, 5%);
+    color: darken($primary-color, 5%);
     cursor: pointer;
   }
 }
