--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
+  <div class="site-inner">
   {% include head.html %}
 
   <body>
@@ -16,5 +16,5 @@
     {% include footer.html %}
 
   </body>
-
+</div>
 </html>
