--- a/_sass/modules/_config.scss
+++ b/_sass/modules/_config.scss
@@ -2,19 +2,6 @@
 // Global Settings
 //**
 
-/* @import must be at top of file, otherwise CSS will not work */
-@import url("//hello.myfonts.net/count/34ce95");
-
-@font-face {font-family: 'Gilroy-SemiBold';src: url('webfonts/34CE95_4_0.eot');src: url('webfonts/34CE95_4_0.eot?#iefix') format('embedded-opentype'),url('webfonts/34CE95_4_0.woff2') format('woff2'),url('webfonts/34CE95_4_0.woff') format('woff'),url('webfonts/34CE95_4_0.ttf') format('truetype');}
-@font-face {font-family: 'Gilroy-Regular';src: url('webfonts/34CE95_6_0.eot');src: url('webfonts/34CE95_6_0.eot?#iefix') format('embedded-opentype'),url('webfonts/34CE95_6_0.woff2') format('woff2'),url('webfonts/34CE95_6_0.woff') format('woff'),url('webfonts/34CE95_6_0.ttf') format('truetype');}
-@font-face {font-family: 'Gilroy-Medium';src: url('webfonts/34CE95_9_0.eot');src: url('webfonts/34CE95_9_0.eot?#iefix') format('embedded-opentype'),url('webfonts/34CE95_9_0.woff2') format('woff2'),url('webfonts/34CE95_9_0.woff') format('woff'),url('webfonts/34CE95_9_0.ttf') format('truetype');}
-@font-face {font-family: 'Gilroy-Light';src: url('webfonts/34CE95_B_0.eot');src: url('webfonts/34CE95_B_0.eot?#iefix') format('embedded-opentype'),url('webfonts/34CE95_B_0.woff2') format('woff2'),url('webfonts/34CE95_B_0.woff') format('woff'),url('webfonts/34CE95_B_0.ttf') format('truetype');}
-@font-face {font-family: 'Gilroy-Heavy';src: url('webfonts/34CE95_D_0.eot');src: url('webfonts/34CE95_D_0.eot?#iefix') format('embedded-opentype'),url('webfonts/34CE95_D_0.woff2') format('woff2'),url('webfonts/34CE95_D_0.woff') format('woff'),url('webfonts/34CE95_D_0.ttf') format('truetype');}
-@font-face {font-family: 'Gilroy-ExtraBold';src: url('webfonts/34CE95_F_0.eot');src: url('webfonts/34CE95_F_0.eot?#iefix') format('embedded-opentype'),url('webfonts/34CE95_F_0.woff2') format('woff2'),url('webfonts/34CE95_F_0.woff') format('woff'),url('webfonts/34CE95_F_0.ttf') format('truetype');}
-@font-face {font-family: 'Gilroy-Bold';src: url('webfonts/34CE95_11_0.eot');src: url('webfonts/34CE95_11_0.eot?#iefix') format('embedded-opentype'),url('webfonts/34CE95_11_0.woff2') format('woff2'),url('webfonts/34CE95_11_0.woff') format('woff'),url('webfonts/34CE95_11_0.ttf') format('truetype');}
-@font-face {font-family: 'Gilroy-Black';src: url('webfonts/34CE95_13_0.eot');src: url('webfonts/34CE95_13_0.eot?#iefix') format('embedded-opentype'),url('webfonts/34CE95_13_0.woff2') format('woff2'),url('webfonts/34CE95_13_0.woff') format('woff'),url('webfonts/34CE95_13_0.ttf') format('truetype');}
-
-
 // Global Font Imports
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700);
 @import url('https://fonts.googleapis.com/css?family=Abel');
@@ -30,7 +17,7 @@ $desktop-break: 60rem;
 $large-desktop-break: 73.13rem;
 
 // Global Color Variables (need to add / remove values to map _maps.scss)
-$primary-color: red;
+$primary-color: #FDB62B;
 $project-grey: #eee;
 $project-black: #2C363F;
 $project-white: #fff;
@@ -42,7 +29,7 @@ $f-xxl: 4.5rem;
 $f-xl: 4rem;
 $f-l: 3.25rem;
 $f-m: 1.95rem;
-$f-base: 1.5rem;
+$f-base: 1.6rem;
 $f-s: 1.25rem;
 $f-xs: 0.875rem;
 $f-xxs: 0.75rem;
@@ -54,7 +41,7 @@ $pt-serif: "pt-serif", serif;
 $sans-serif: "Open Sans", sans-serif;
 
 $base-font-size: $f-base;
-$base-line-height: 1.5;
+$base-line-height: 1.6;
 $base-font-weight: normal;
 
 // Include Specific Modules
