--- a/_sass/partials/_grid.scss
+++ b/_sass/partials/_grid.scss
@@ -1,9 +1,14 @@
 .wrapper {
-  max-width: 110rem;
+  max-width: 120rem;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 25px;
+  padding-right: 25px;
+
+  @include tablet {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
 }
 
 .g {
